[package]
name = "cafebabe"
version = "0.6.1"
authors = ["Kartikaya Gupta"]
edition = "2018"
license = "0BSD"

description = "A simple parser for Java class files"
homepage = "https://github.com/staktrace/cafebabe/blob/main/README.md"
repository = "https://github.com/staktrace/cafebabe"
readme = "README.md"
keywords = ["parse", "java", "class", "jvm", "classfile"]
categories = ["parsing"]
exclude = [".gitignore", ".github/**", "examples/**", "tests/**"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "1.0"
cesu8 = { git = "https://github.com/MechSlayer/cesu8-rs.git", default-features = false }
hashbrown = { version = "0.14" }

[features]
default = ["std"]
std = ["cesu8/std"]
